--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,119 +1,42 @@
 {
-  "name": "beakerbrowser",
-  "devDependencies": {
-    "browserify": "^16.0.0",
-    "electron": "11.0.0-beta.18",
-    "electron-builder": "^22.6.0",
-    "electron-notarize": "^0.3.0",
-    "eslint": "^4.5.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "fs-jetpack": "^1.2.0",
-    "gulp": "^4.0.0",
-    "gulp-batch": "^1.0.5",
-    "gulp-less": "^4.0.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.5",
-    "into-stream": "^2.0.1",
-    "pre-commit": "^1.2.2",
-    "q": "^1.4.1",
-    "rollup": "^1.23.0",
-    "yargs": "^4.2.0"
-  },
-  "optionalDependencies": {
-    "appdmg": "^0.4.5",
-    "rcedit": "^0.5.0"
-  },
-  "build": {
-    "afterSign": "./afterSignHook.js",
-    "appId": "com.bluelinklabs.beaker-browser",
-    "asar": false,
-    "asarUnpack": [
-      "./fg/json-renderer/index.build.js",
-      "./fg/syntax-highlighter/index.js",
-      "./node_modules/@beaker/dat-legacy-tools/**",
-      "./node_modules/sodium-native/**",
-      "./node_modules/hyperdrive-daemon/**"
-    ],
-    "copyright": "© 2020, Blue Link Labs",
-    "directories": {
-      "app": "../app",
-      "buildResources": "../build",
-      "output": "../dist"
-    },
-    "npmRebuild": false,
-    "protocols": [
-      {
-        "name": "URL",
-        "schemes": [
-          "http",
-          "https"
-        ]
-      },
-      {
-        "name": "hyper",
-        "schemes": [
-          "hyper"
-        ]
-      },
-      {
-        "name": "dat",
-        "schemes": [
-          "dat"
-        ]
-      }
-    ],
-    "appImage": {
-      "category": "Network",
-      "desktop": {
-        "Name": "Beaker Browser",
-        "GenericName": "Web Browser",
-        "Type": "Application",
-        "Terminal": false,
-        "MimeType": "text/html;text/xml;application/xhtml+xml;application/xml;application/rss+xml;application/rdf+xml;image/gif;image/jpeg;image/png;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/hyper;x-scheme-handler/dat;video/webm;application/x-xpinstall;",
-        "Categories": "GNOME;GTK;Network;WebBrowser;"
-      }
-    },
-    "mac": {
-      "category": "public.app-category.productivity",
-      "hardenedRuntime": true,
-      "type": "distribution",
-      "entitlements": "../build/entitlements.plist",
-      "entitlementsInherit": "../build/entitlements.plist",
-      "extendInfo": {
-        "NSCameraUsageDescription": "This app requires camera access to record video.",
-        "NSMicrophoneUsageDescription": "This app requires microphone access to record audio."
-      }
-    },
-    "publish": {
-      "provider": "github"
-    }
+  "name": "webizen-scripts",
+  "version": "0.25.0",
+  "description": "Scripts for building and developing Webizen.",
+  "author": "MediaProphet",
+  "engines": {
+    "node": ">=20.0.0"
   },
   "scripts": {
-    "postinstall": "cd ../app && npm install && cd bg/dat/converter && npm install",
-    "build": "gulp build",
-    "burnthemall": "node ./tasks/burnthemall.js",
-    "lint": "eslint --ignore-pattern 'color-thief.js' --ignore-pattern 'app/node_modules' --ignore-pattern 'vendor' --ignore-pattern '*.build.js' --ignore-pattern 'assets' --fix app",
-    "rebuild": "gulp rebuild",
-    "release": "electron-builder -p never && gulp postbuild",
-    "start": "gulp start",
-    "watch": "gulp start-watch"
+    "start": "electron ../app",
+    "watch": "vite",
+    "rebuild": "electron-rebuild",
+    "burnthemall": "rm -rf node_modules ../app/node_modules && npm install && npm run rebuild",
+    "test": "jest",
+    "build:webext": "vite build --outDir dist/webext && cp public/* dist/webext/",
+    "build:electron": "electron-builder",
+    "build:android": "cd ../app && npx react-native bundle --platform android --dev false --entry-file ../platforms/mobile/index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/",
+    "build:ios": "cd ../app && npx react-native bundle --platform ios --dev false --entry-file ../platforms/mobile/index.js --bundle-output ios/main.jsbundle --assets-dest ios/"
   },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/beaker",
-    "logo": "https://opencollective.com/opencollective/logo.txt"
+  "devDependencies": {
+    "electron": "32.1.0",
+    "tailwindcss": "3.4.0",
+    "vite": "^5.2.11",
+    "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
+    "react-native-cli": "^2.0.1",
+    "jest": "^29.7.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/beakerbrowser/beaker"
-  },
-  "bugs": {
-    "url": "https://github.com/beakerbrowser/beaker/issues"
-  },
-  "homepage": "https://beakerbrowser.com/",
-  "dependencies": {}
+  "build": {
+    "appId": "org.webizen.app",
+    "productName": "Webizen",
+    "directories": {
+      "output": "dist/electron"
+    },
+    "files": [
+      "app/**/*",
+      "modules/**/*",
+      "services/**/*",
+      "platforms/electron/**/*"
+    ]
+  }
 }
