--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Webizen project",
   "main": "index.js",
   "scripts": {
-    "build": "npm install && echo 'Building project...'"
+    "build": "rimraf dist && cpx 'src/**/*' dist && echo 'Building project...'",
+    "test": "jest"
   },
   "dependencies": {
     "electron": "^32.1.0",
@@ -13,6 +14,17 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "jest": "^29.0.0"
+    "cpx": "^1.5.0",
+    "jest": "^29.7.0",
+    "rimraf": "^3.0.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "testEnvironment": "node"
   }
 }
