--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "electron": "^32.1.0",
+    "electron": "^37.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
     "cpx": "^1.5.0",
-    "electron-builder": "^23.0.0",
-    "electron-forge": "^6.0.0",
+    "electron-builder": "^26.0.12",
+    "@electron-forge/cli": "^7.8.1",
     "jest": "^29.7.0",
     "rimraf": "^3.0.0"
   },
