--- a/package.json
+++ b/package.json
@@ -7,11 +7,23 @@
     "build": "rimraf dist && cpx \"src/**/*\" dist && electron-builder && electron-forge make",
     "test": "jest"
   },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "dependencies": {
     "electron": "^37.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "@cashtab/wallet-lib": "^3.6.0",
+    "@digitalbazaar/vc": "^1.7.0",
+    "@octokit/rest": "^20.0.0",
+    "gitlab": "^17.1.1",
+    "i18next": "^23.10.0",
+    "monaco-editor": "^0.48.0",
+    "pages-ui": "^1.0.0",
+    "work_ui": "^1.0.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
